<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, HttpTestActivity!</string>
    <string name="app_name">Fueldroid</string>
    <string name="county">County</string>
    <string name="postcode">Postcode</string>
    <string name="town">Town</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="enterlocation">Please Enter Location</string>
    <string name="entercategory">Please Select a Category</string>
    <string name="locationprompt">Select Search Category</string>
    <string name="loadingresults">Loading Results..</string>

    <string-array name="categories">
        <item>County</item>
        <item>Postcode</item>
        <item>Town</item>
    </string-array>

    <string name="title_activity_test">TestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
